# Roberto

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  roberto.c
drivers/dma/: dma.c
drivers/enc28j60/: enc28j60.c  internal.c  internal.h
drivers/gpio/: gpio.c
drivers/spi/: spi.c  spi_dma.c
include/: slab.h
include/io/: buses.h  dma.h  enc28j60.h  gpio.h  spi.h  spi_dma.h
include/kernel/: future.h  sched.h  time.h
include/sched/: task.h
include/stm32f4/: arm_math.h  core_cm0.h  core_cm3.h  core_cm4.h  stm32f4xx.h
kernel/: time.c
kernel/sched/: context_switch.s  future.c  internal.h  sched.c
mm/: slab.c
sched/: context_switch.s  task.c
stm32f4/: system_stm32f4xx.c
stress-test/: .mypy.ini  Makefile  pyproject.toml  test_remote_slave.sh
stress-test/stress_test/: comm.py  main.py  packets.py
